@@ -192,6 +192,9 @@ ONMainWindow::ONMainWindow ( QWidget *parent ) :QMainWindow ( parent )
     isPassShown=true;
     readExportsFrom=QString::null;
     spoolTimer=0l;
+#ifdef Q_OS_DARWIN
+    modMapTimer=0;
+#endif
     ldapOnly=false;
     embedControlChanged=false;
     statusString=tr ( "connecting" );
@@ -5463,9 +5466,12 @@ void ONMainWindow::slotProxyFinished ( int,QProcess::ExitStatus )
 {
 
 #ifdef Q_OS_DARWIN
-    disconnect(modMapTimer, SIGNAL(timeout()), this, SLOT(slotSetModMap()));
-    delete modMapTimer;
-    modMapTimer=0;
+    if(modMapTimer)
+    {
+        disconnect(modMapTimer, SIGNAL(timeout()), this, SLOT(slotSetModMap()));
+        delete modMapTimer;
+        modMapTimer=0;
+    }
     kbMap=QString::null;
 //fixes bug, when mainwindow inputs not accepting focus under mac
     setFocus();
@@ -5725,10 +5731,13 @@ void ONMainWindow::slotProxyStderr()
         }
         sbSusp->setToolTip ( tr ( "Suspend" ) );
 #ifdef Q_OS_DARWIN
-        modMapTimer=new QTimer(this);
-        connect(modMapTimer, SIGNAL(timeout()), this, SLOT (slotSetModMap()));
-        modMapTimer->start(10000);
-        slotSetModMap();
+        if(!modMapTimer)
+        {
+            modMapTimer=new QTimer(this);
+            connect(modMapTimer, SIGNAL(timeout()), this, SLOT (slotSetModMap()));
+            modMapTimer->start(10000);
+            slotSetModMap();
+        }
 #endif
         if ( newSession )
         {
